--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
                         </goals>
                         <configuration>
                             <sources>
-                                <source>target/generated/src/main/java</source>
+                                <source>${project.build.directory}/generated/src/main/java</source>
                             </sources>
                         </configuration>
                     </execution>
